# model-demographic

./: blueripple-model-demographic.cabal  cabal.project
src/BlueRipple/Model/Demographic/: BLCorrModel.hs  DataPrep.hs  EnrichCensus.hs  EnrichData.hs  MarginalStructure.hs  NullSpaceBasis.hs  StanModels.hs  TPModel1.hs  TPModel2.hs  TPModel3.hs  TableProducts.hs
